style.css
* {
    margin: 0;
    padding: 0;
}

html, body {
    height: 100vh;
    color: white;
}

img {
    width: 40px;
    height: 40px;
    background: #000;
}

.layout {
    display: grid;
    grid-template-columns: 250px 1fr;
    grid-template-rows:  170px 1fr;

    grid-template-areas: 
    "aside header"
    "aside main"
    "aside main"
    "aside main";

    background: #cec3c3;
    height: 100%;
}

aside {
    display: grid;
    padding: 40px 40px;
    background: #293c9b;
    grid-area: aside;
}

aside ul {
    display: grid;
    gap: 10px;
    list-style: none;
    margin-bottom: 50px;
}

aside li {
    font-size: 1.1rem;

}

.aside-entry {
    display: flex;
    gap: 10px;
}

.logo {
    display: flex;
    gap: 20px;
}

/* HEADER */

header {
    display: grid;
    grid-template-rows: 1fr 1fr;
    background: #cec4c4;

    grid-area: header;
}

.header-up {
    display: grid;
    align-content: center;
    grid-template-columns: 50px 1fr 1fr;
    padding: 20px 50px;
    gap: 15px;
}

.element {
    background: #000;
}

.right {
    display: grid;
    grid-auto-flow: column;
    gap: 10px;   
    margin-left: 100px;
}

.right > div {
    background: #4490dc;
}

.header-bot {
    display: flex;
}

.header-bot ul {
    list-style: none;
    display: grid;
    grid-auto-flow: column;
    gap: 20px;
}

input {
    max-height: 20px;
    padding: 20px;
}

/* --- */

main {
    display: grid;
    grid-template-columns: 3fr 1fr;
    background: #932480;
    width: 100%;

    grid-area: main;
}

.card-wrap {
    display: grid;
    width: 100%;
    gap: 20px;
    background: #440909;
    padding: 30px;

}

.card {
    background: #000;
    height: 200px;
    padding: 10px;
    border: 2px solid white;

}

.main-right {
    background: #2f6626;
}

